Update tasks to Associate Manager, CES

--- a/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
@@ -190,8 +190,8 @@ The Senior Manager, Global Enablement reviews if all Greenhouse tokens are corre
 
 ## Correcting an error in an issued employment contract
 
-1. If an error is noticed, please make the Senior Manager, Global Enablement aware.
-1. The Senior Manager, Global Enablement will assign the contract correction to a Candidate Experience Specialist, ideally to the same person, that created the already issued contract.
+1. If an error is noticed, please make the Associate Manager, Candidate Experience aware.
+1. The Associate Manager, Candidate Experience will assign the contract correction to a Candidate Experience Specialist, ideally to the same person, that created the already issued contract.
 1. If the change is payroll relevant The Candidate Experience Specialist makes total-rewards@ gitlab.com and uspayroll@ gitlab.com or nonuspayroll@ gitlab.com aware.
 1. The Candidate Experience Specialist creates a new corrected contract using above templates and adds the following sentence in: "This agreement is effective {Hire date} and supersedes the employment agreement dated {date of erroneous agreement}."
   -  Make a copy of the template and save it to the [working documents folder](https://drive.google.com/drive/folders/0B4eFM43gu7VPNUlKZEFtNGtSRk0?resourcekey=0-_qX_2OXbs71yJa3HZy0TAQ) on Google Drive to edit
