Move ecosystem dev pages to manage

--- a/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
@@ -23,7 +23,9 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 1. [Manage](/handbook/product/categories/#manage-stage)
   * [Manage:Authentication and Authorization](/handbook/engineering/development/dev/manage/authentication-and-authorization)
   * [Govern:Compliance](/handbook/engineering/development/dev/manage/compliance)
+  * [Manage:Foundations](/handbook/engineering/development/dev/manage/foundations/)
   * [Manage:Import](/handbook/engineering/development/dev/manage/import)
+  * [Manage:Integrations](/handbook/engineering/development/dev/manage/integrations/)
   * [Manage:Workspace](/handbook/engineering/development/dev/manage/workspace)
 1. [Plan](/handbook/product/categories/#plan-stage)
   * [Plan:Project Management](/handbook/engineering/development/dev/plan-project-management/)
@@ -38,9 +40,6 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
   * [Create: Editor](/handbook/engineering/development/dev/create/editor/)
   * [Create Frontend](/handbook/engineering/frontend/create/)
   * [Gitaly](/handbook/engineering/development/dev/gitaly/)
-1. [Ecosystem](/handbook/product/categories/#ecosystem-stage)
-  * [Manage: Foundations](/handbook/engineering/development/dev/ecosystem/foundations/)
-  * [Manage: Integrations](/handbook/engineering/development/dev/ecosystem/integrations/)
 
 ## Who we are
 
@@ -51,6 +50,12 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 
 #### Govern:Compliance
 <%= direct_team(manager_role: 'Engineering Manager, Govern:Compliance') %>
+
+#### Manage:Foundations
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Foundations') %>
+
+#### Manage:Integrations
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Integrations') %>
 
 #### Manage:Import
 <%= direct_team(manager_role: 'Engineering Manager, Manage:Import') %>
@@ -89,14 +94,6 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 
 #### Gitaly
 <%= direct_team(manager_slug: 'tim-z', role_regexp: /Gitaly/) %>
-
-#### Ecosystem Backend
-
-<%= direct_team(manager_role: 'Backend Engineering Manager, Ecosystem') %>
-
-#### Ecosystem Frontend
-
-<%= direct_team(manager_role: 'Engineering Manager, Ecosystem') %>
 
 ## Stable Counterparts
 
