--- a/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/_what_to_work_on.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/_what_to_work_on.erb
@@ -64,7 +64,7 @@ We expect people to be [managers of one][efficiency] and prefer [responsibility
 over rigidity][efficiency], so there's no need to ask for permission if you
 decide to work on something that's not on the issue board, but please keep your
 other responsibilities in mind, and make sure that there is an issue, you are
-assigned to it, and consider sharing it in [#g_ecosystem_integrations](https://gitlab.slack.com/archives/g_ecosystem_integrations).
+assigned to it, and consider sharing it in [#g_manage_integrations](https://gitlab.slack.com/archives/g_manage_integrations).
 
 
 [how-we-plan]: /direction/#how-we-plan-releases
