--- a/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Ecosystem Integrations Group
-description: The Ecosystem Integrations group is responsible for the Integrations category in the Ecosystem stage.
+title: Manage Integrations Group
+description: The Manage Integrations group is responsible for the Integrations category in the Manage stage.
 ---
 
 ## On this page
@@ -12,11 +12,11 @@ description: The Ecosystem Integrations group is responsible for the Integration
 
 ## About
 
-The Integrations group is a part of the [Ecosystem Stage](https://about.gitlab.com/handbook/product/categories/#ecosystem-stage).
+The Integrations group is a part of the [Manage Stage](https://about.gitlab.com/handbook/product/categories/#manage-stage).
 We support the product with 3rd party integrations, REST APIs and GraphQL foundational code, and Webhooks.
 
 This page covers processes and information specific to the Integrations group. See also the [Integrations direction page](/direction/manage/integrations/)
-and the [features we support per category](/handbook/product/product-categories/features/#ecosystemintegrations-group).
+and the [features we support per category](/handbook/product/categories/features/#manageintegrations-group).
 
 ## How to reach us
 
@@ -25,7 +25,7 @@ issue in the relevant project (typically [GitLab](https://gitlab.com/gitlab-org/
 `~"group::integrations"` label, along with any other appropriate labels. Then,
 feel free to ping the relevant Product Manager and/or Engineering Manager.
 
-For more urgent items, feel free to use the Slack Channel (internal): [#g_ecosystem_integrations](https://gitlab.slack.com/archives/g_ecosystem_integrations).
+For more urgent items, feel free to use the Slack Channel (internal): [#g_manage_integrations](https://gitlab.slack.com/archives/g_manage_integrations).
 
 ## Backend Group Members
 
@@ -52,7 +52,7 @@ group. To find the current OKRs for this
 
 ## Metrics
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/metrics.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/metrics.erb") %>
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Integrations"} %>
 
@@ -74,7 +74,7 @@ Quality engineering is included in our workflow via the [Quad Planning Process](
 
 ### Milestone Planning
 
-Before starting a milestone, the team coordinates using [planning issues](https://gitlab.com/gitlab-org/ecosystem-stage/team-tasks/-/issues/?label_name%5B%5D=group%3A%3Aintegrations).
+Before starting a milestone, the team coordinates using [planning issues](https://gitlab.com/gitlab-org/manage/integrations/team/-/issues/?label_name%5B%5D=Planning%20Issue).
 We follow this process:
 - The Product Manager defines the goals of the milestone.
 - Engineers comment about the issues they consider relevant for the milestone.
@@ -83,13 +83,13 @@ We follow this process:
 - The Product Manager updates the description with the list of milestone issues and closes the planning issue.
 
 We use [Google Apps Script](https://script.google.com/home/projects/1cH4Hrv03Kf_dlqPyxPdoyxWcV_x2d2u2PKNnGP_YwNjGifjcD4c29GKJ/edit)
-to estimate capacity. For more accurate [capacity planning](/handbook/engineering/development/dev/ecosystem/integrations/#capacity-planning),
+to estimate capacity. For more accurate [capacity planning](/handbook/engineering/development/dev/manage/integrations/#capacity-planning),
 engineers have to report their time off using PTO by Roots before the beginning
 of the milestone.
 
 ### What to work on
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/what_to_work_on.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/what_to_work_on.erb") %>
 
 ### Issue Development Workflow
 
@@ -159,23 +159,23 @@ Deliverable / Stretch Board tracks `~Deliverable` and `~Stretch` issues.
 
 ### Capacity Planning
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/capacity_planning.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/capacity_planning.erb") %>
 
 ### Backlog Refinement
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/backlog_refinement.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/backlog_refinement.erb") %>
 
 ### Retrospectives
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/retrospectives.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/retrospectives.erb") %>
 
 ## Merge request roulette reviews
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/roulette_reviews.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/roulette_reviews.erb") %>
 
 ## Monitoring
 
-<%= partial("handbook/engineering/development/dev/ecosystem/integrations/monitoring.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/integrations/monitoring.erb") %>
 
 ## Employee Development
 
@@ -185,4 +185,4 @@ Here are some resources team members can use for employee development:
 - [Create stage training opportunities](/handbook/engineering/development/dev/create/engineers/training/)
 - [GitLab learning and development](/handbook/people-group/learning-and-development/)
 - [Level Up](https://levelup.gitlab.com/learn/dashboard)
-- [Ecosystem career chats](/handbook/engineering/development/dev/ecosystem/integrations/career-chats)
+- [Integrations career chats](/handbook/engineering/development/dev/manage/integrations/career-chats)
