--- a/sites/handbook/source/handbook/engineering/development/dev/manage/foundations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/foundations/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Ecosystem Foundations Team
-description: The Ecosystem Foundations team is responsible for foundational Frontend work and our Design System Pajamas.
+title: Manage Foundations Team
+description: The Manage Foundations team is responsible for foundational Frontend work and our Design System Pajamas.
 ---
 
 ## On this page
@@ -15,11 +15,11 @@ description: The Ecosystem Foundations team is responsible for foundational Fron
 [GitLab]: https://gitlab.com/gitlab-org/gitlab
 [GitLab UI]: https://gitlab.com/gitlab-org/gitlab-ui
 [Pajamas]: https://gitlab.com/gitlab-org/gitlab-services/design.gitlab.com
-[#g_ecosystem_foundations]: https://gitlab.slack.com/archives/C010NAWPRV4
+[#g_manage_foundations]: https://gitlab.slack.com/archives/C010NAWPRV4
 
 ## About
 
-We're the Foundations team and we are part of the [Ecosystem Stage](/handbook/product/categories/#ecosystem-stage).
+We're the Foundations team and we are part of the [Manage Stage](/handbook/product/categories/#manage-stage).
 
 This page is the shared team page for our Engineers, Product Designers, and Product Manager!
 
@@ -48,7 +48,7 @@ We're hiring for these roles:
     The Foundations team does the preparation work necessary so that other Engineers at GitLab
     and members from the wider community can help out with these efforts. 
 
-    **Do you want to contribute?** Please see [this issue for a good entry point](https://gitlab.com/gitlab-org/ecosystem-stage/team-tasks/-/issues/95).
+    **Do you want to contribute?** Please see [this issue for a good entry point](https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/95).
 
  - **Navigation & Settings** ([Direction Page](/direction/manage/foundations/navigation_settings/))
  - **GitLab Docs** ([Direction Page](/direction/manage/foundations/gitlab_docs/))
@@ -62,7 +62,7 @@ it's best to create an issue in the relevant project (typically [GitLab], [Pajam
 add the `~"group::foundations"` label, along with any other appropriate labels.
 Then, feel free to ping the relevant Product Manager and/or Engineering Manager.
 
-For more urgent items or if you are unsure who to ask, ping `@gitlab-org/ecosystem-stage/foundations` or use [#g_ecosystem_foundations] on Slack (internal only).
+For more urgent items or if you are unsure who to ask, ping `@gitlab-org/manage/foundations` or use [#g_manage_foundations] on Slack (internal only).
 
 ### Capacity Planning
 
