Update Ecosystem => Manage in direction pages

--- a/source/direction/manage/foundations/index.html.md.erb
+++ b/source/direction/manage/foundations/index.html.md.erb
@@ -12,7 +12,7 @@ canonical_path: "/direction/manage/foundations/"
 
 **Content last reviewed on 2022-03-07**
 
-This is the direction page for the Foundations group which is part of the [Ecosystem stage](/direction/dev/index.html#ecosystem) of the DevOps lifecycle and is responsible for the following categories: 
+This is the direction page for the Foundations group which is part of the [Manage stage](/direction/manage) of the DevOps lifecycle and is responsible for the following categories: 
 
 |  Category   |   Direction  |  Description | Maturity  |
 |  ---   |   ---   |   ---   |  ---  |
