--- a/source/direction/manage/integrations/index.html.md.erb
+++ b/source/direction/manage/integrations/index.html.md.erb
@@ -7,13 +7,13 @@ title: "Group Direction - Integrations"
 {:toc}
 
 | ------ | ------ |
-| **Stage** | [Ecosystem](/direction/ecosystem/) |
+| **Stage** | [Manage](/direction/manage/) |
 | **Maturity** | [Viable](/direction/maturity/) |
 | **Last reviewed** | 2022-05-06 |
 
 - [Issue List](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&state=opened&label_name[]=group%3A%3Aintegrations)
 - [Epic List](https://gitlab.com/groups/gitlab-org/-/epics/1515)
-- [Overall Ecosystem Direction](/direction/ecosystem/)
+- [Overall Manage Direction](/direction/manage/)
 
 
 ## Manage:Integrations Vision
