Categories page: Move Ecosystem groups to manage for other functionality

--- a/sites/handbook/source/handbook/product/categories/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/categories/index.html.md.erb
@@ -39,7 +39,7 @@ The categories form a hierarchy:
 
 1. **Sections**: Are a collection of stages. We attempt to align these logically along common workflows like Dev, Sec and Ops.
 Sections are maintained in [`data/sections.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/sections.yml).
-1. **Stages**: are aligned logically starting with the 8 **loop stages** of Plan, Create, Verify, Secure, Package, Release, Configure, and Monitor. We then add the **value stages** that we talk about in marketing. These include Manage and Govern. Lastly, we add the **team stages**: Ecosystem, Growth, and Enablement. These stages have groups that rally around the same users, GitLab integrators, GitLab itself, and GitLab administrators, respectively.
+1. **Stages**: are aligned logically starting with the 8 **loop stages** of Plan, Create, Verify, Secure, Package, Release, Configure, and Monitor. We then add the **value stages** that we talk about in marketing. These include Manage and Govern. Lastly, we add the **team stages**: Growth, and Enablement. These stages have groups that rally around the same users, GitLab integrators, GitLab itself, and GitLab administrators, respectively.
 Stages are maintained in [`data/stages.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/stages.yml).
 Each stage has a corresponding [`devops::<stage>` label](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#stage-labels) under the `gitlab-org` group.
 1. **Group**: A stage has one or more [groups](/company/team/structure/#product-groups).
@@ -305,8 +305,6 @@ Maybe we should make our features easier to search to replace the section below.
     See also: https://gitlab.com/gitlab-com/gl-security/security-communications/communications/-/issues/368
 %>
 - Spam protection and CAPTCHA integration, not including [SpamCheck](/handbook/engineering/security/security-engineering-and-research/application-security/#spamcheck)
-
-### Other functionality in [Ecosystem](/handbook/product/categories/#ecosystem-stage) stage
 
 #### [Foundations group](/handbook/product/categories/#foundations-group)
 - Navigation used throughout the application, including the top bar and side bar
