Remove reference to SSO in LDAP SKU

--- a/sites/uncategorized/source/services/implementation/integration/index.html.haml
+++ b/sites/uncategorized/source/services/implementation/integration/index.html.haml
@@ -32,7 +32,7 @@ extra_css:
         %h1 What's included?
         %p Examples of the types of integrations our team can facilitate:
         %ul
-          %li LDAP / SAML / SSO
+          %li LDAP
           %li JIRA
           %li Jenkins
 
