--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
@@ -96,7 +96,28 @@ To facilitate communication between the wider community and GitLab team members,
 
 Calls will be open to everyone and recordings will be posted after the call. See examples of past office hours from [this playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KrXZEInAfyddFlalvwaxL-I). To make it easier for the community to find the videos, each stage should create their own office hours playlist and link to it from their handbook page.
 
-There is a public [Community Office Hours calendar](https://calendar.google.com/calendar?cid=Y191c2MyNGJ0MHNvZ3Q0N2FoMDJxMHFkNDhra0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t) that you can use to schedule your team's events.
+All the community office hour calls should be added to the [Developer Evangelism calendar](https://about.gitlab.com/handbook/marketing/community-relations/developer-evangelism/#-team-calendar) and [meetup.com group](https://www.meetup.com/gitlab-virtual-meetups/).
+
+#### How to organize a community office hour call
+
+**Preparation**
+- Once you have a finalized date and time, add it to:
+  - the [meetup.com group](https://www.meetup.com/gitlab-virtual-meetups/) (meetup.com account available at your GitLab's 1Password vault)
+  - the [developer evangelism calendar](https://about.gitlab.com/handbook/marketing/community-relations/developer-evangelism/#-team-calendar)
+- Update [the office hour running notes doc](https://docs.google.com/document/d/18ddf5d5xASImrYnAG9P8VJXe0I63SBXy7ufDBBNB5H4/edit#) with the Zoom URL and call details 
+- Announce it [on Discord](https://discord.gg/gitlab)
+- Tweet about it, [tagging GitLab](https://twitter.com/gitlab)
+- The day before the call, post reminders on Discord
+
+**Running the call**
+- Ask for everyone's permission to live stream the call. Then press the Live Stream on YouTube button in Zoom to begin streaming.
+- Enable close captioning in zoom for accessibility.
+- Once the call starts, do a round of introductions asking the question: "what brought you to this call". This will help you adjust the call to the community's needs and, answer any questions/meet their expectations.
+- Keep detailed meeting minutes
+
+**After the call**
+- Add the youtube video to the "office hour calls" playlist
+- Post a recap and the video recording on Discord  
 
 ### Community challenge
 
