Dev QE team: Change Ecosystem => Manage

--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -39,8 +39,8 @@ Quality Engineering Manager: Ramya Authappan
 | 8   	| Plan      	| [Project Management]     	| Désirée Chevalier                                                    	|
 | 9   	| Plan      	| [Product Planning]       	| TBH                                                                  	|
 | 10   	| Plan      	| [Certify]                	| TBH                                                                  	|
-| 11   	| Ecosystem 	| [Integrations]           	| Sean Gregory 	                                                        |
-| 12   	| Ecosystem 	| [Foundations]            	| TBH                                                                  	|
+| 11   	| Manage    	| [Integrations]           	| Sean Gregory 	                                                        |
+| 12   	| Manage 	    | [Foundations]            	| TBH                                                                  	|
 
 
 ## Quality Performance Indicators for Dev Section
@@ -66,8 +66,8 @@ Please find below the relevant projects/epics/issue boards used by various produ
 | 8       | [Project Management] | Désirée Chevalier               | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20)                                              |
 | 9       | [Product Planning]   | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
 | 10       | [Certify]            | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
-| 11       | [Integrations]       | Sean Gregory                    | [Planning Issue](https://gitlab.com/gitlab-org/ecosystem-stage/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aintegrations&first_page_size=20)                        |
-| 12       | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/ecosystem-stage/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
+| 11       | [Integrations]       | Sean Gregory                    | [Planning Issue](https://gitlab.com/gitlab-org/manage/integrations/team/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aintegrations&first_page_size=20)                        |
+| 12       | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
 
 [Dev section]: /handbook/product/categories/#dev-section
 [Authentication and Authorization]: /handbook/product/categories/#authentication-and-authorization-group
