Fix broken URL in TeamOps pages

--- a/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
@@ -18,7 +18,7 @@ twitter_creator: "@gitlab"
 ![GitLab TeamOps contribution illustration](/handbook/teamops/images/teamops-illustration_contribution_purple.png)
 {: .shadow.medium.center}
 
-This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](h/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
+This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
 
 # Decisions are the fuel for high-performance teams
 
