--- a/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
@@ -17,7 +17,7 @@ twitter_creator: "@gitlab"
 ![GitLab TeamOps teamwork illustration](/handbook/teamops/images/teamops-illustration_teamwork_purple.png)
 {: .shadow.medium.center}
 
-This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](h/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
+This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
 
 
 # Teams exist to deliver results
