Update description frontmatter

--- a/sites/uncategorized/source/community/heroes/index.html.haml
+++ b/sites/uncategorized/source/community/heroes/index.html.haml
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "GitLab Heroes: Building GitLab together"
-description: "Learn why GitLab's integrated CI pipelines help your team build, test, deploy, and monitor your code."
+description: "GitLab Heroes engages, supports, connects, and recognizes members of the wider GitLab community who make outstanding contributions to GitLab and our community around the globe."
 suppress_header: true
 canonical_path: "/community/heroes/"
 twitter_image: "/images/opengraph/Heroes/Heroes-get-recognized.png"
