Update Infra handbook to explain how reliability "getting assistance issues are triaged"

--- a/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
@@ -114,9 +114,15 @@ The Infrastructure Department is comprised of three distinct groups:
 * [**Scalability**](/handbook/engineering/infrastructure/team/scalability/), which focuses on improving GitLab application at GitLab.com scale.
 
 ### Getting Assistance from Infrastructure Teams
+
+To create an issue for the related teams you can use the links below:
+
 * [Delivery](https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/new)
 * [Reliability](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/new?issuable_template=default)
+  * To learn more about how these issues are triaged you can [read more about how reliability triages issues here.](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#issue-board)
 * [Scalability](https://gitlab.com/gitlab-com/gl-infra/scalability/-/issues/new)
+
+
 
 Product Management duties for the Infrastructure Department are handled by the [Infrastructure PM](/handbook/engineering/infrastructure/product-management/), who reports into the Enablement Stage.
 
