updating October - December Product Leader Rotation Schedule

--- a/sites/handbook/source/handbook/product/product-leadership/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-leadership/index.html.md.erb
@@ -61,9 +61,16 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2022-07-27 | Orit Golowinski | [Issue 4462](https://gitlab.com/gitlab-com/Product/-/issues/4462) |
 | 2022-08-24 | Hillary Benson | [Issue 4627](https://gitlab.com/gitlab-com/Product/-/issues/4627) |
 | 2022-09-14 | Justin Farris and David DeSanto | [Issue 4787](https://gitlab.com/gitlab-com/Product/-/issues/4787) |
-| 2022-10-18 | Joshua Lambert| TBD |
-| 2022-11-??| Omar Fernandez | TBD |
-| 2022-12-?? | Orit Golowinski | TBD |
+| 2022-10-18 | Taylor McCaslin | [Issue 4912](https://gitlab.com/gitlab-com/Product/-/issues/4912) |
+| 2022-11-10 | Joshua Lambert | TBD |
+| 2022-12-14 | Omar Fernandez | TBD |
+| 2023-01-?? | TBD | TBD | 
+| 2023-02-?? | TBD | TBD |
+| 2023-03-?? | TBD | TBD |
+| 2023-04-?? | TBD | TBD |
+| 2023-05-?? | TBD | TBD |
+| 2023-06-?? | TBD | TBD |
+| 2023-07-?? | TBD | TBD |
 
 
 ## Product Section Leaders Performance Indicator Rotation
