Data Science Section Support

--- a/sites/handbook/source/handbook/engineering/development/growth/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/index.html.md.erb
@@ -47,7 +47,7 @@ Some useful links to see how and what we are working on include:
 
 ### People leaders in development
 
-<%= shared_team_members(role_regexps: [/(Director of Engineering for Growth, Sec, and ModelOps|Senior Engineering Manager, Anti-Abuse, Govern, and Growth|Fullstack Engineering Manager, Growth)/i]) %>
+<%= shared_team_members(role_regexps: [/(Director of Engineering for Growth, Sec, and Data Science|Senior Engineering Manager, Anti-Abuse, Govern, and Growth|Fullstack Engineering Manager, Growth)/i]) %>
 
 ### All Team Members
 
