--- a/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
@@ -45,7 +45,7 @@ The following members of other functional teams are our stable counterparts:
         'Fullstack Engineering Manager, Govern:Threat Insights',
         'Fullstack Engineering Manager, Govern:Threat Insights',
         'Staff Backend Engineer and Acting Fullstack Manager, Govern:Security Policies',
-        'Director of Engineering for Growth, Sec, and ModelOps',
+        'Director of Engineering for Growth, Sec, and Data Science',
         'Senior Engineering Manager, Anti-Abuse, Govern, and Growth'
       ])
 %>
