--- a/sites/handbook/source/handbook/engineering/metrics/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/metrics/index.html.md.erb
@@ -56,8 +56,6 @@ The links below take you to a handbook dashboard page which covers metrics from 
     * [Security Policies Group Dashboards](/handbook/engineering/metrics/sec/govern/security-policies)
     * [Threat Insights Group Dashboards](/handbook/engineering/metrics/sec/govern/threat-insights)
     * [Compliance Group Dashboards](/handbook/engineering/metrics/sec/govern/compliance)
-  * [Anti-Abuse Stage Dashboards](/handbook/engineering/metrics/sec/anti-abuse/)
-    * [Anti-Abuse Group Dashboards](/handbook/engineering/metrics/sec/anti-abuse/anti-abuse)
 * [Analytics Section Dashboards](/handbook/engineering/metrics/analytics)
   * [Product Intelligence Group Dashboards](/handbook/engineering/metrics/analytics/product-intelligence)
 * [Growth Section Dashboards](/handbook/engineering/metrics/growth)
@@ -76,10 +74,13 @@ The links below take you to a handbook dashboard page which covers metrics from 
     * [Global Search Group Dashboards](/handbook/engineering/metrics/enablement/global-search)
     * [Database Group Dashboards](/handbook/engineering/metrics/enablement/database)
     * [Sharding Group Dashboards](/handbook/engineering/metrics/enablement/sharding)
-* [ModelOps Section Dashboards](/handbook/engineering/metrics/modelops/)
-  * [Applied Machine Learning Group Dashboards](/handbook/engineering/metrics/modelops/applied-ml)
-  * [MLOps Group Dashboards](/handbook/engineering/metrics/modelops/mlops)
-  * [DataOps Group Dashboards](/handbook/engineering/metrics/modelops/dataops)
+* [Data Science Section Dashboards](/handbook/engineering/metrics/data-science/)
+  * [Anti-Abuse Stage Dashboards](/handbook/engineering/metrics/data-science/anti-abuse/)
+    * [Anti-Abuse Group Dashboards](/handbook/engineering/metrics/data-science/anti-abuse/anti-abuse)
+  * [Applied Machine Learning Group Dashboards](/handbook/engineering/metrics/data-science/modelops/applied-ml)
+  * [Applied Machine Learning Group Dashboards](/handbook/engineering/metrics/data-science/modelops/applied-ml)
+  * [MLOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/mlops)
+  * [DataOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/dataops)
 
 These handbook dashboard pages are populated from the following filterable Sisense dashboards.
 * [Top Engineering Metrics Dashboard](https://app.periscopedata.com/app/gitlab/1000952/Top-Engineering-Metrics-Dashboard)
