--- a/sites/handbook/source/handbook/product/ux/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/ux/index.html.md.erb
@@ -138,7 +138,7 @@ This section is inspired by the recent trend of Engineering Manager READMEs. _e.
 - [Valerie Karnes](https://gitlab.com/vkarnes/readme) - Director of Product Design
 - [Jacki Bauer](https://gitlab.com/jackib) - Product Design Manager
 - [Justin Mandell](https://gitlab.com/jmandell/readme) - Product Design Manager
-- [Taurie Davis](https://gitlab.com/tauriedavis/readme/blob/master/README.md) - Product Designer Manager, Ecosystem & ModelOps
+- [Taurie Davis](https://gitlab.com/tauriedavis/readme/blob/master/README.md) - Product Designer Manager, Ecosystem & Data Science
 - [Rayana Verissimo](https://gitlab.com/rayana/readme) - Product Design Manager
 - [Matej Latin](https://gitlab.com/matejlatin/focus) - Senior Product Designer
 - [Jeremy Elder](https://gitlab.com/jeldergl/view/blob/master/README.md) - Staff Product Designer, Foundations
