--- a/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
@@ -37,7 +37,7 @@ The following people are permanent members of the Growth:Acquisition team:
 We work directly with the following team members in the Growth:Acquisition group:
 
 <%=
-other_manager_roles = ['Director of Engineering for Growth, Sec, and ModelOps','Senior Engineering Manager, Anti-Abuse, Govern, and Growth']
+other_manager_roles = ['Director of Engineering for Growth, Sec, and Data Science','Senior Engineering Manager, Anti-Abuse, Govern, and Growth']
 direct_managers_role = 'Fullstack Engineering Manager, Growth:Acquisition and Activation'
 roles_regexp = /[,&] (Growth(?!:)|Growth:Acquisition)/
 
@@ -79,5 +79,3 @@ for work in the build phase of the product development flow.
 
 [Growth stage]: /handbook/engineering/development/growth/
 [Acquisition issues]: https://gitlab.com/gitlab-org/growth/product/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Aacquisition
-
-
