--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
@@ -17,7 +17,7 @@ description: "Quality Engineering team for the Sec & Data Science Sections"
 | **Team Boards** | [Team Board](https://gitlab.com/groups/gitlab-org/-/boards/1524991) |
 | **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/team-tasks/issues/) |
 
-Engineers in this team are embedded in the [Sec section] and [ModelOps section].
+Engineers in this team are embedded in the [Sec Section] and [Data Science Section].
 
 ## Team members
 
