--- a/source/direction/template.html.md.erb
+++ b/source/direction/template.html.md.erb
@@ -18,9 +18,9 @@ extra_css:
 
 GitLab’s 10-year product vision is inspired by our mission to make it so that everyone can contribute. Today GitLab is the [DevOps Platform](https://about.gitlab.com/solutions/devops-platform/), empowering organizations to maximize the overall return on software development by delivering software faster and efficiently, while strengthening security and compliance. We believe our DevOps platform vision is shared by market analysts who have coined it the [Value Stream Delivery Platform market](/analysts/gartner-vsdp21/). Over the next ten years, our vision is to expand GitLab in the following ways.
 
-First, we expect to continue rapidly maturing our DevOps platform so that GitLab is able to replace any DevOps point solution. To replace any DevOps solution will require most of our categories to be lovable, which is likely a 10 year journey. To ensure rapid progress, we have a 3-year [goal](https://about.gitlab.com/company/strategy/#1-accelerate-market-maturity-around-the-devops-platform) to have 50% of our categories at lovable maturity by the end of 2023, and this [three year product strategy](https://about.gitlab.com/direction/#3-year-strategy) articulates our current focus. Once we achieve that goal, there will still be more work to do, but having half our categories lovable will mean most DevOps tools are replaceable by GitLab.  
+First, we expect to continue rapidly maturing our DevOps platform so that GitLab is able to replace any DevOps point solution. To replace any DevOps solution will require most of our categories to be lovable, which is likely a 10 year journey. To ensure rapid progress, we have a 3-year [goal](https://about.gitlab.com/company/strategy/#1-accelerate-market-maturity-around-the-devops-platform) to have 50% of our categories at lovable maturity by the end of 2023, and this [three year product strategy](https://about.gitlab.com/direction/#3-year-strategy) articulates our current focus. Once we achieve that goal, there will still be more work to do, but having half our categories lovable will mean most DevOps tools are replaceable by GitLab.
 
-Second, we expect GitLab to expand its DevOps platform to provide similar support for [ModelOps and DataOps](https://about.gitlab.com/direction/modelops/). Over time, data and machine learning/AI models will increasingly power software experiences. Our customers will need an ability to manage data and its associated ML/AI models in a similar fashion to software projects. We endeavor to support data scientists and data engineers just as we support software developers today, by enabling rapid development, testing, production deployment, and monitoring of data models. We would also expect to automate handling of product usage data collection, GDPR compliance of data under management, cookie and privacy management, experimentation tools, A/B testing, etc.  
+Second, we expect GitLab to expand its DevOps platform to provide similar support for [ModelOps and DataOps](https://about.gitlab.com/direction/modelops/). Over time, data and machine learning/AI models will increasingly power software experiences. Our customers will need an ability to manage data and its associated ML/AI models in a similar fashion to software projects. We endeavor to support data scientists and data engineers just as we support software developers today, by enabling rapid development, testing, production deployment, and monitoring of data models. We would also expect to automate handling of product usage data collection, GDPR compliance of data under management, cookie and privacy management, experimentation tools, A/B testing, etc.
 
 Third, we expect GitLab to become a creation platform for all digital content. This will require us to expand beyond traditional software development. Possible new digital content creation formats we could support include low code/no code development, design creation, and other creative media like music and movies. It would also likely require enhanced content management to better enable customers to create great digital experiences for their users.
 
@@ -31,7 +31,7 @@ our [product handbook](/handbook/product/product-principles/).
 
 ## 3-year Direction Video
 
-The following 6-minute video gives a quick overview into where the GitLab product is headed the next few years.  
+The following 6-minute video gives a quick overview into where the GitLab product is headed the next few years.
 
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/2By7ipuQk1o" frameborder="0" allowfullscreen="true"> </iframe>
@@ -57,7 +57,7 @@ GitLab competes in a large market space, with a [TAM](https://internal-handbook.
 
 #### Product Strategy Learning Session
 
-GitLab CEO and Product leadership discuss the Product Strategy in detail during a [CEO Handbook Learning Session](/handbook/people-group/learning-and-development/learning-initiatives/#ceo-handbook-learning-sessions). 
+GitLab CEO and Product leadership discuss the Product Strategy in detail during a [CEO Handbook Learning Session](/handbook/people-group/learning-and-development/learning-initiatives/#ceo-handbook-learning-sessions).
 
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/yI29xFAgKoA" frameborder="0" allowfullscreen="true"> </iframe>
@@ -120,16 +120,16 @@ The themes are to help facilitate cross-team collaboration when invariably teams
 For FY23, the 3 key product themes we are focused on are:
 
 ### GitLab Hosted First
- 
+
 _Primary Leading Performance Indicator_:
 
-* Meet [GitLab.com availability target](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#gitlabcom-availability) 
+* Meet [GitLab.com availability target](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#gitlabcom-availability)
 
 _Secondary Lagging Performance Indicator_:
 
 * Increase in [Paid GMAU for gitlab.com](https://internal-handbook.gitlab.io/handbook/company/performance-indicators/product/#paid-combined-monthly-active-users-paid-cmau)_ (NOTE: this metric is [Internal](https://about.gitlab.com/handbook/communication/confidentiality-levels/#internal))
 
-We continue to see massive growth opportunities on SaaS. We made a lot of great progress with GitLab Hosted First including embracing error-budgets. 
+We continue to see massive growth opportunities on SaaS. We made a lot of great progress with GitLab Hosted First including embracing error-budgets.
 
 We will continue this theme into FY23.
 
@@ -137,17 +137,17 @@ We will continue this theme into FY23.
 
 _Performance Indicator: [Usability Benchmarking](https://about.gitlab.com/handbook/product/ux/performance-indicators/#usability-benchmarking-overall-score-by-stage) improvements for key workflows_
 
-In FY22 we had a broad effort to improve usability. We accomplished a lot. We also learned that we need a concerted effort to improve key workflows as they are often complex, require cross-functional alignment and drive a majority of usability feedback about the product. For FY23 we aim to provide: 
+In FY22 we had a broad effort to improve usability. We accomplished a lot. We also learned that we need a concerted effort to improve key workflows as they are often complex, require cross-functional alignment and drive a majority of usability feedback about the product. For FY23 we aim to provide:
 
 * Excellent enterprise planning workflows
-* Intuitive Settings & Navigation 
+* Intuitive Settings & Navigation
 * Onboarding/learnability to drive multi-stage adoption
 * A code review experience that is more efficient and intuitive for both reviewers and authors. Key outcomes include less average time spent per line of change, and fewer review cycles on average.
 * A pipeline creating and editing experience that is intuitive, and customizable by central platform teams
 * A deployment workflow that enables collaboration between platform and app teams to perform safe, reliable, continuous deployment to production environments
 
 
-### Extend our lead in CI/CD 
+### Extend our lead in CI/CD
 
 _Performance Indicator: Double current Ops Section CMAU by end of Fiscal Year 2023 to 3.6M_
 
@@ -256,7 +256,7 @@ acceptance criteria](https://gitlab.com/gitlab-org/gitlab-ce/blob/master/CONTRIB
 
 ### Key Technical Challenges
 
-If you are interested in contributing to specific, priority key technical challenges, we maintain the following list of priority issues and epics. Feel free to add a comment expressing your interest in these issues and epics to determine the best place to contribute. 
+If you are interested in contributing to specific, priority key technical challenges, we maintain the following list of priority issues and epics. Feel free to add a comment expressing your interest in these issues and epics to determine the best place to contribute.
 
 - Workspaces [phase1 - Migrate Groups & Projects to Namespace](https://gitlab.com/groups/gitlab-org/-/epics/6473)
 - [Work Items](https://gitlab.com/groups/gitlab-org/-/epics/6033)
@@ -317,7 +317,7 @@ We have more details about our plans on the [Mobile direction page](/direction/m
 
 ## ML/AI at GitLab
 
-Right now, GitLab doesn't use any ML/AI technologies in production features, but we expect to use them [in the near future](/direction/learn/applied_ml/) for several types of problems. This is the focus of our new [Learn stage](/direction/modelops/).
+With Gitlab 15.4, Suggested Reviewers was released as our first customer-facing ML/AI technology in production features. We have additional ambitions [in the near future](/direction/modelops/applied_ml/) for several types of problems. This is the focus of our new [ModelOps stage](/direction/modelops/).
 
 ## Cross-Stage Efforts
 
@@ -338,7 +338,7 @@ GitLab consistently strives to deliver a cohesive experience that enables workfl
 - [Associate job artifacts, or a generic package to a Release](https://docs.gitlab.com/ee/user/project/releases/)
 
 ### Planned Cross-Stage Improvements
-- [Improve Pipeline Authoring's Experience with Compliance Pipelines](https://gitlab.com/gitlab-org/gitlab/-/issues/334486) 
+- [Improve Pipeline Authoring's Experience with Compliance Pipelines](https://gitlab.com/gitlab-org/gitlab/-/issues/334486)
 - [Update Issues based on Cross-Stage activity](https://gitlab.com/groups/gitlab-org/-/epics/218)
 - [CI/CD Tracing with OpenTelemetry](https://gitlab.com/gitlab-org/gitlab/-/issues/338943)
 - [Alert on CI/CD pipeline events](https://gitlab.com/gitlab-org/gitlab/-/issues/217770)
