--- a/sites/handbook/source/handbook/engineering/development/ops/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/index.html.md.erb
@@ -79,7 +79,8 @@ Each month there are two showcase sessions organized for both APAC and AMER/EMEA
 
 | Year | Month | AMEA | APAC | Async videos |
 | ------ | ------ | ------ | ------ | ------ |
-| 2022 | October |  |   |  |
+| 2022 | November |  |  |  |
+| 2022 | October | [Split GitLab Monolith into components](https://www.youtube.com/watch?v=cODM0xHqL28) | No showcases | [TaskScaler 101](https://www.youtube.com/watch?v=GU81g2oOtAQ) |
 | 2022 | September | [Import packages with a CI pipeline](https://youtu.be/mk7gHFtUXpE)  | No showcases  |  |
 | 2022 | August | No showcases | Async video -> | [Leader election in GitLab Agent for Kubernetes](https://youtu.be/Gz8NJJ2WFrE) | 
 | 2022 | July | [Video](https://youtu.be/gkZ0Re9sfi8) | No showcases | [MR Coverage Report](https://drive.google.com/file/d/1cf2AxtMDTgcF3F1fWcHdIWJL1ps-S_oa/view) & [CI Workflows](https://youtu.be/cwfRI9m3rRs) | 
