Add Discord to community index

--- a/sites/uncategorized/source/community/index.html.haml
+++ b/sites/uncategorized/source/community/index.html.haml
@@ -50,6 +50,11 @@ extra_css:
       .tile-content
         %h4 GitLab Community Forum
         %p Join the conversation, and connect with peers about all things DevOps.
+    = link_to "https://discord.gg/gitlab", class: "tile tile-animated grid-item" do
+      = image_tag "/images/community/community-forum.svg", class: "icon-small", alt: "GitLab community forum svg"
+      .tile-content
+        %h4 Discord
+        %p Chat with the GitLab team and community.
     = link_to "/resources/", class: "tile tile-animated grid-item" do
       = image_tag "/images/community/community-resources.svg", class: "icon-small", alt: "GitLab community resources svg"
       .tile-content
