--- a/sites/uncategorized/source/job-families/product/product-manager/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/product/product-manager/index.html.md.erb
@@ -46,6 +46,7 @@ to get started.
 - Highly independent and pragmatic
 - Excellent proficiency in English
 - Excellent communication skills at all levels, including Executive level communication
+- Use [Simple Language](https://about.gitlab.com/handbook/communication/#simple-language) and [MECEFU Terms](https://about.gitlab.com/handbook/communication/#mecefu-terms) to ensure clear and concise communication
 - You are living wherever you want and are excited about the [all remote](https://about.gitlab.com/company/culture/all-remote/) lifestyle
 - You share our [values](/handbook/values/), and work in accordance with those values
 - Have a growth mindset
