Fix missing bracket / link typo

--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/index.html.md.erb
@@ -59,7 +59,7 @@ You can use either channel to reply, as they are bidirectional. However, bear in
   - Open floor for the community to bring topics
 - Include instructions on how to join
   - Link to zoom (or any other video platform)
-- Add the event to the [Developer Evangelism calendar](/handbook/marketing/community-relations/developer-evangelism/#-team-calendar). If you are not a GitLab Team Member, ask the [Code Contributor Program Manager](/handbook/marketing/community-relations/code-contributor-program/#contact) or one of the [Developer Evangelism Team Members]/handbook/marketing/community-relations/developer-evangelism/#-team-members-and-focus-areas) to add the event to the calendar.
+- Add the event to the [Developer Evangelism calendar](/handbook/marketing/community-relations/developer-evangelism/#-team-calendar). If you are not a GitLab Team Member, ask the [Code Contributor Program Manager](/handbook/marketing/community-relations/code-contributor-program/#contact) or one of the [Developer Evangelism Team Members](/handbook/marketing/community-relations/developer-evangelism/#-team-members-and-focus-areas) to add the event to the calendar.
 - Bring the event to the attention of the [Code Contributor Program Manager](/handbook/marketing/community-relations/code-contributor-program/#contact).
 - Follow the instructions below for social support or open a request at the [Code Contributor's planning repo](https://gitlab.com/gitlab-com/marketing/community-relations/contributor-program/general/issues/new?issuable_template=event-support-request).
 
