Add projects data requirement for MR coach

--- a/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/resources/merge-request-coach-lifecycle.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/code-contributor-program/resources/merge-request-coach-lifecycle.html.md.erb
@@ -6,12 +6,13 @@ title: "Merge Request Coach Lifecycle"
 ## Applying to become a Merge Request Coach
 
 1. Create an MR to add "Merge Request Coach" to "departments" and "expertise" sections in your team page entry (see [example](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/102653)).
+1. Make sure you add at least [one project and role](https://gitlab.com/gitlab-com/www-gitlab-com/-/tree/master/data/team_members/person#data-structure) to your team entry page, too.
 1. Use the `Merge Request Coach` MR template to explain your motivation in the MR body:
    * Why you want to become a Merge Request Coach?
    * How much time you are planning to spend on it?
    * Which duties you are focusing on (e.g. triage, finish stale MRs)?
 1. Mention `@gitlab-org/quality/contributor-success` so they are aware of the application.
-1. Mention you manager and ask them to merge it.
+1. Mention your manager and ask them to merge it.
 1. Once accepted, one of the coaches with Owner permissions should add you to the `@gitlab-org/coaches` group.
 
 ## Stepping down gracefully
@@ -27,6 +28,7 @@ If you are no longer able to serve as a Merge Request Coach, you should identify
 1. [Merge Request Coach responsibilities](/job-families/expert/merge-request-coach#responsibilities)
 1. [Merge Request Coach collaboration guidelines](/job-families/expert/merge-request-coach#collaboration-guidelines)
 1. [Gitter room for contributors](https://gitter.im/gitlabhq/contributors): please join if you're not part of it already!
+1. [Community Discord channel](https://discord.gg/gitlab): please join if you haven't already!
 
 <% coaches = Gitlab::Homepage.team.merge_request_coaches %>
 
