Add references to Daily Stand-up Bot to Support Team Handbook

--- a/sites/handbook/source/handbook/support/index.html.md.erb
+++ b/sites/handbook/source/handbook/support/index.html.md.erb
@@ -301,6 +301,11 @@ When naming channels, "spt" is meant for internal channels, meaning those that w
 
 The "spt_gg_" prefix is used for [Support Global Groups](https://gitlab.com/gitlab-com/support/support-team-meta/-/issues/3879) internal channels.
 
+#### Daily Stand-up bot
+{: .no_toc}
+
+The [SGG Slackbot's](https://gitlab.com/gitlab-com/support/support-ops/other-software/sgg-slackbot) Daily Stand-up posts at the commencement of each region's [Support Hours](https://about.gitlab.com/support/#definitions-of-gitLab-global-support-hours) regularly, in a number of channels to advise global groups of different information. For further details of the different variations, please refer to the SGG handbook page of the group you are curious about.
+
 #### Channels
 {: .no_toc}
 
