Add stub handbook pages for the Package stage groups

--- a/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: Package:Container Registry Group
+title: Package:Package Registry Group
 ---
 
 ## On this page
@@ -11,12 +11,12 @@ title: Package:Container Registry Group
 
 ## The Team
 
-The Container Registry is part of the GitLab [Package
+The Package Registry is part of the GitLab [Package
 stage](/handbook/engineering/development/ops/package/), which integrates with [GitLab's CI/CD product](/direction/ops/).
 
 ### Team Members
 
-The following people are permanent members of the Container Registry Group:
+The following people are permanent members of the Package Registry Group:
 
 <%= direct_team(manager_slug: 'michelletorres') %>
 
