--- a/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
@@ -300,8 +300,8 @@ Schedule for Docs project maintenance tasks:
 - August, 2022: [Russell Dickenson]
 - September, 2022: [Amy Qualls]
 - October, 2022: [Marcel Amirault]
-- November, 2022: [Phillip Wells]
-- December, 2022: [Ashraf Khamis]
+- November, 2022: [Kati Paizee]
+- December, 2022: [Diana Logan]
 
 ## Reviews
 
