Update Package direction with official support for OCI registries in Helm

--- a/source/direction/package/template.html.md.erb
+++ b/source/direction/package/template.html.md.erb
@@ -237,13 +237,11 @@ Helm charts are easy to create, version, share and publish right within GitLab.
 
 ##### Competitive Landscape
 
-An important distinction between competitive products is that Helm 3 supports using an OCI container registry to as a Helm repository. However, this requires that you use Helm 3 in experimental mode, which may introduce other risks.
+An important distinction between competitive products is that Helm 3 now officially supports using an OCI container registry as a Helm repository.
 
 * [Helm Hub](https://hub.helm.sh/)
 * [Artifactory](https://www.jfrog.com/confluence/display/RTF/Helm+Chart+Repositories)
 * [Chart museum](https://chartmuseum.com/)
-* [Azure DevOps*](https://docs.microsoft.com/en-us/azure/container-registry/container-registry-helm-repos)
-* [Google Cloud*](https://cloud.google.com/artifact-registry/docs/helm/manage-charts)
-* [AWS*](https://docs.aws.amazon.com/AmazonECR/latest/userguide/push-oci-artifact.html)
-
-`*` requires using Helm 3 in experimental mode.
+* [Azure DevOps](https://docs.microsoft.com/en-us/azure/container-registry/container-registry-helm-repos)
+* [Google Cloud](https://cloud.google.com/artifact-registry/docs/helm/manage-charts)
+* [AWS](https://docs.aws.amazon.com/AmazonECR/latest/userguide/push-oci-artifact.html)
